# pants

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  BUILD  README.md  pants.toml  pyproject.toml  taskfile.yaml
.github/workflows/: pr.yaml
apps/app_1/src/: BUILD  container.py  main.py  settings.py
apps/app_1/tests/: conftest.py  test_main.py
apps/app_2/src/: container.py  main.py
apps/app_2/src/services/: hello.py
apps/app_2/tests/: BUILD  conftest.py
src/: container.py  main.py  settings.py
src/services/: hello.py
