[project]
name = "pants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dependency-injector>=4.48.2",
    "fastapi>=0.119.1",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.14.0",
    "pre-commit>=4.5.1",
    "pycln>=2.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.1",
    "vulture>=2.14",
]
